--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@
 }
 
  .menu {
-    margin: -20px 4px 0 400px;
+    margin: -20px 4px 0 15px;
   }
 
   .menu__item {
@@ -342,36 +342,40 @@
     background-size: 36px;
     background-repeat: no-repeat;
     background-position: 0 0;
+    margin-left: 0;
   }
 
   .header {
     margin: 25px 15px;
-    width: 52px;
+    width: 60px;
     padding: 0;
   }
 
   .main {
     text-align: center;
     padding: 31% 0 0;
-    background-size: 77%;
+    background-size: 50%;
     background-position: top center;
   }
 
   .main__title {
-    margin: 148px 0 35px 5px;
+    margin: 0 0;
     font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+    padding: 112px 200px;
   }
 
   .main__subtitle {
-    margin: 0 0 20px 60px;
+    margin: -90px 0 20px 63px;
     font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
     width: 238px;
+    padding: 0px 184px;
   }
 
   .main__button {
-    font: 500 13px/3px Roboto, arial, helvetica, sans-serif;
-    margin: 4px 0 0 2px;
+    font: 500 14px/3px Roboto, arial, helvetica, sans-serif;
+    margin: 7px 0 0 2px;
     border-radius: 4px;
+    padding: 22px 24px 20px 16px
   }
 
   #menu__toggle {
@@ -396,19 +400,19 @@
     display: block;
     position: absolute;
     width: 100%;
-    height: 2px;
+    height: 3px;
     background-color: #0056ec;
     transition-duration: 0.25s;
 }
 
   .menu__btn > span::before {
     content: '';
-    top: -8px;
+    top: -7px;
 }
 
   .menu__btn > span::after {
     content: '';
-    top: 8px;
+    top: 7px;
   }
 
   .menu__item {
@@ -432,7 +436,178 @@
   }
 
   .menu__item:last-child {
-    margin-right: 1px;
+    margin-right: 30px;
+  }
+
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+}
+
+  #menu__toggle:checked ~ .menu__btn > span::before {
+    top: 0;
+    transform: rotate(0);
+  }
+
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+
+  #menu__toggle:checked ~ .menu {
+    visibility: visible;
+    left: 0;
+  }
+
+  .circle_1 {
+    background: #fff;
+    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    transform: translate(0, 0);
+}
+
+  .circle_2 {
+    background: #fff;
+    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    transform: translate(0, 0);
+  }
+
+  .circle_3 {
+    background: #fff;
+    border-radius: 50%;
+    width: 8px;
+    height: 8px;
+    transform: translate(0, 0);
+  }
+}
+
+@media (max-width: 552px) {
+  .main__title{
+    margin: 0 0;
+    padding: 152px 200px;
+  }
+}
+
+@media (max-width: 375px) {
+  .menu {
+    display: none;
+    display: block;
+    position: fixed;
+    visibility: hidden;
+    top: 0;
+    left: -100%;
+    width: 400px;
+    height: 100%;
+    margin: 0;
+    padding: 172px 0;
+    list-style: none;
+    text-align: center;
+    background-color: #fff;
+    transition-duration: 0.25s;
+  }
+
+  .logo {
+    background: url('img/logomobile.svg');
+    background-size: 36px;
+    background-repeat: no-repeat;
+    background-position: 0 0;
+    margin-left: 0;
+  }
+
+  .header {
+    margin: 25px 15px;
+    width: 60px;
+    padding: 0;
+  }
+
+  .main {
+    text-align: center;
+    padding: 31% 0 0;
+    background-size: 79%;
+    background-position: top center;
+  }
+
+  .main__title {
+    margin: 153px 0 34px 5px;
+    font: bold 30px/39px pt_serif, arial, helvetica, sans-serif;
+    padding: 0 0;
+  }
+
+  .main__subtitle {
+    margin: 0 0 20px 63px;
+    font: 500 16px/19px Roboto, arial, helvetica, sans-serif;
+    width: 238px;
+    padding: 0 0;
+  }
+
+  .main__button {
+    font: 500 14px/3px Roboto, arial, helvetica, sans-serif;
+    margin: 7px 0 0 2px;
+    border-radius: 4px;
+    padding: 22px 24px 20px 16px
+  }
+
+  #menu__toggle {
+    opacity: 0;
+  }
+
+  .menu__btn {
+    display: flex;
+    align-items: center;
+    position: fixed;
+    top: 27px;
+    right: 23px;
+    width: 27px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+}
+
+  .menu__btn > span,
+  .menu__btn > span::before,
+  .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    background-color: #0056ec;
+    transition-duration: 0.25s;
+}
+
+  .menu__btn > span::before {
+    content: '';
+    top: -7px;
+}
+
+  .menu__btn > span::after {
+    content: '';
+    top: 7px;
+  }
+
+  .menu__item {
+    display: block;
+    transition-duration: 0.25s;
+    padding: 10px 24px;
+    color: #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+    font-weight: 600;
+    text-decoration: none;
+  }
+
+  .menu__item:hover {
+    background-color: #cfd8dc;
+  }
+
+  .menu__item_active:after {
+    top: 49px;
+    opacity: 0;
+  }
+
+  .menu__item:last-child {
+    margin-right: 30px;
   }
 
   #menu__toggle:checked ~ .menu__btn > span {
